php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55552 bad encoding not detected
Submitted: 2011-08-31 12:43 UTC Modified: 2011-09-14 15:01 UTC
From: pajoye@php.net Assigned: dmitry (profile)
Status: Closed Package: Unicode Engine related
PHP Version: 5.4SVN-2011-08-31 (snap) OS: Windows
Private report: No CVE-ID: None
 [2011-08-31 12:43 UTC] pajoye@php.net
Description:
------------
See zend\tests\multibyte\multibyte_encoding_006.phpt, it fails under windows


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-08-31 12:43 UTC] pajoye@php.net
-Assigned To: +Assigned To: dmitry
 [2011-09-14 15:00 UTC] dmitry@php.net
Automatic comment from SVN on behalf of dmitry
Revision: http://svn.php.net/viewvc/?view=revision&revision=316751
Log: Fixed bug #55552 (bad encoding not detected)
 [2011-09-14 15:01 UTC] dmitry@php.net
-Status: Assigned +Status: Closed
 [2011-09-14 15:01 UTC] dmitry@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-18 09:48 UTC] laruence@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=723d7029d8885dae5e589c11c04d676a5c6a0318
Log: Fixed bug #55552 (bad encoding not detected)
 [2012-07-24 23:39 UTC] rasmus@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=723d7029d8885dae5e589c11c04d676a5c6a0318
Log: Fixed bug #55552 (bad encoding not detected)
 [2013-11-17 09:36 UTC] laruence@php.net
Automatic comment on behalf of dmitry
Revision: http://git.php.net/?p=php-src.git;a=commit;h=723d7029d8885dae5e589c11c04d676a5c6a0318
Log: Fixed bug #55552 (bad encoding not detected)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 20 00:00:03 2026 UTC