Fixed bug #55552 (bad encoding not detected)